게시글을 조회할 때 댓글도 같이 조회되도록 코드 수정
- fetch = FetchType.LAZY
- @Transactional(readOnly = true)